force-app/main/default/objects/NotifEventRecGrp_Junk__c/NotifEventRecGrp_Junk__c.object-meta.xml
<CustomObject>
    <label>NotifEventRecGrp_Junk</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NotifEventRecGrp_Junk</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>