force-app/main/default/objects/NotifEventRecGrp_Junk__c/fields/errNotifEvent__c.field-meta.xml
<CustomField>
    <fullName>errNotifEvent__c</fullName>
    <label>Notification Event</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>errNotifEvent</valueSetName>
    </valueSet>
</CustomField>