force-app/main/default/objects/NotifEventRecGrp_Junk__c/fields/errRecipientGroup__c.field-meta.xml
<CustomField>
    <fullName>errRecipientGroup__c</fullName>
    <label>Recipient Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>errRecipientGroup</valueSetName>
    </valueSet>
</CustomField>