force-app/main/default/objects/NotifEventRecGrp_Junk__c/fields/Kind__c.field-meta.xml
<CustomField>
    <fullName>Kind__c</fullName>
    <label>Kind</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Users</fullName>
            </value>
            <value>
                <fullName>Contacts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>