force-app/main/default/objects/NotifEventRecGrp_Junk__c/fields/LevelH__c.field-meta.xml
<CustomField>
    <fullName>LevelH__c</fullName>
    <label>LevelH</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>