force-app/main/default/objects/NotifEventRecGrp_Junk__c/fields/MsgLevel__c.field-meta.xml
<CustomField>
    <fullName>MsgLevel__c</fullName>
    <label>MsgLevel</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>