force-app/main/default/objects/NotifEventRecGrp_Junk__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>NotifEventRecGrp_Junk__c</referenceTo>
    <relationshipLabel>NotifEventRecGrp_Junk</relationshipLabel>
    <relationshipName>NotifEventRecGrp_Junk_Parent</relationshipName>
    <type>Lookup</type>
</CustomField>