force-app/main/default/objects/NotifEventRecGrp_Junk__c/fields/ParentH__c.field-meta.xml
<CustomField>
    <fullName>ParentH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentH</label>
    <referenceTo>NotifEventRecGrp_Junk__c</referenceTo>
    <relationshipLabel>NotifEventRecGrp_Junk (ParentH)</relationshipLabel>
    <relationshipName>NotifEventRecGrp_Junk_ParentHier</relationshipName>
    <type>Lookup</type>
</CustomField>