force-app/main/default/objects/NotifEventRecGrp_Junk__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>errNotifEvent__c</columns>
    <columns>errRecipientGroup__c</columns>
    <columns>Parent__c</columns>
    <columns>Kind__c</columns>
    <columns>MsgLevel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>